<resources>
    <string name="app_name">WeatherAnalyser</string>
    <string name="today">Today</string>
    <string name="week">Weekly</string>
    <string name="share">Share</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Wednesday Aug 20</string>
    <string name="new_delhi">New Delhi</string>
    <string name="type">Partly Cloudy</string>
    <string name="temp">12</string>
    <string name="temp_weekly">32&#xb0;/26&#xb0;</string>
    <string name="sign">℃</string>
    <string name="temp_img">Temp Img</string>
    <string name="feel_like">Feel Like</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="uv">UV Index</string>
    <string name="wind_speed">km/h</string>
    <string name="option_menu">option menu</string>
    <string name="search_menu">Search</string>
</resources>