<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/week_frag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.WeeklyFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:paddingTop="24dp"
        android:layout_height="370dp"
        android:background="#302951"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_layout_all"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/option_menu"
                android:layout_width="20dp"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginStart="25dp"
                android:contentDescription="@string/option_menu"
                android:src="@drawable/ic_menu"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/search_menu"
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginEnd="25dp"
                android:contentDescription="@string/search_menu"
                android:src="@drawable/ic_baseline_search_24"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/city_name_weekly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:text="@string/new_delhi"
                android:textColor="@color/white"
                android:textSize="28sp"
                app:layout_constraintStart_toStartOf="@id/option_menu"
                app:layout_constraintTop_toBottomOf="@id/option_menu" />

            <TextView
                android:id="@+id/day_weekly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/date"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/city_name_weekly"
                app:layout_constraintTop_toBottomOf="@id/city_name_weekly" />

            <TextView
                android:id="@+id/temp_type_weekly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/type"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/option_menu"
                app:layout_constraintTop_toBottomOf="@id/day_weekly" />

            <TextView
                android:id="@+id/temp_weekly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="8dp"
                android:text="@string/temp"
                android:textColor="@color/white"
                android:textSize="74sp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="@id/option_menu"
                app:layout_constraintTop_toBottomOf="@id/temp_type_weekly" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/sign"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:layout_constraintStart_toEndOf="@id/temp_weekly"
                app:layout_constraintTop_toTopOf="@id/temp_weekly" />

            <ImageView
                android:id="@+id/weather_type_iv_weekly"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="110dp"
                android:contentDescription="@string/type"
                android:src="@drawable/ic_cloudy_weather"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="@id/search_menu"
                app:layout_constraintTop_toTopOf="@id/city_name_weekly" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/weekly_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
        tools:listitem="@layout/custom_type_weather" />
</androidx.constraintlayout.widget.ConstraintLayout>
