<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="weather"
            type="com.task.weatheranalyser.model.Weather" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/present_frag"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".fragment.PresentFragment">

            <ImageView
                android:id="@+id/weather_iv"
                android:layout_width="wrap_content"
                android:layout_height="550dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/temp_img"
                android:scaleType="fitXY"
                android:src="@drawable/ic_frame_1"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/weather_type_iv"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="309dp"
                android:layout_marginTop="110dp"
                android:layout_marginEnd="18dp"
                android:contentDescription="@string/type"
                android:src="@drawable/ic_sun"
                android:visibility="visible" />

            <TextView
                android:id="@+id/present_loc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="38dp"
                android:layout_marginTop="45dp"
                android:text="@string/new_delhi"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/present_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/present_loc"
                android:layout_alignParentStart="true"
                android:layout_marginStart="38dp"
                android:layout_marginTop="4dp"
                android:text="@string/date"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/present_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/present_date"
                android:layout_alignParentStart="true"
                android:layout_marginStart="38dp"
                android:layout_marginTop="20dp"
                android:text="@string/type"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/present_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/weather_iv"
                android:layout_alignParentStart="true"
                android:layout_marginStart="38dp"
                android:layout_marginBottom="30dp"
                android:text="@string/temp"
                android:textColor="@color/white"
                android:textSize="65sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/weather_iv"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="70dp"
                android:layout_toEndOf="@id/present_temp"
                android:text="@string/sign"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/feels_like_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/weather_iv"
                android:layout_alignParentStart="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="48dp"
                android:contentDescription="@string/feel_like"
                android:scaleType="fitXY"
                android:src="@drawable/ic_high" />

            <TextView
                android:id="@+id/feels_like_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/weather_iv"
                android:layout_marginStart="12dp"
                android:layout_marginTop="48dp"
                android:layout_toEndOf="@id/feels_like_iv"
                android:text="@string/feel_like"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/feels_like_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/feels_like_tv"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@id/feels_like_iv"
                android:text="@string/sign"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/humidity_iv"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_below="@id/weather_iv"
                android:layout_alignParentStart="true"
                android:layout_marginStart="230dp"
                android:layout_marginTop="48dp"
                android:contentDescription="@string/humidity"
                android:scaleType="fitXY"
                android:src="@drawable/ic_drops" />

            <TextView
                android:id="@+id/humidity_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/weather_iv"
                android:layout_marginStart="12dp"
                android:layout_marginTop="48dp"
                android:layout_toEndOf="@id/humidity_iv"
                android:text="@string/humidity"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/humidity_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/humidity_tv"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@id/humidity_iv"
                android:text="@string/sign"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/wind_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/feels_like_iv"
                android:layout_alignParentStart="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="60dp"
                android:contentDescription="@string/wind"
                android:scaleType="fitXY"
                android:src="@drawable/ic_wind" />

            <TextView
                android:id="@+id/wind_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/feels_like_temp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="60dp"
                android:layout_toEndOf="@id/wind_iv"
                android:text="@string/wind"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/wind_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/wind_tv"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@id/wind_iv"
                android:text="@string/sign"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/uv_iv"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_below="@id/humidity_temp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="230dp"
                android:layout_marginTop="60dp"
                android:contentDescription="@string/uv"
                android:scaleType="fitXY"
                android:src="@drawable/ic_sun_dark" />

            <TextView
                android:id="@+id/uv_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/humidity_temp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="60dp"
                android:layout_toEndOf="@id/uv_iv"
                android:text="@string/uv"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/uv_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/uv_tv"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@id/uv_iv"
                android:text="@string/sign"
                android:textSize="20sp" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</layout>