<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/weather_type_iv_rv"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:contentDescription="@string/type"
        android:src="@drawable/ic_sun_dark"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/day_tv_rv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:text="@string/today"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/weather_type_iv_rv"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/temp_tv_rv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:text="@string/temp_weekly"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/day_tv_rv"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/temp_type_rv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="35dp"
        android:text="@string/type"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/temp_tv_rv"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/dash"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="#CACACA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/weather_type_iv_rv"
        app:layout_constraintTop_toBottomOf="@id/weather_type_iv_rv" />
</androidx.constraintlayout.widget.ConstraintLayout>
